# openGL

./: CMakeLists.txt  TODO.txt
include/: geometry.h  shader.h  utils.h
include/glad/: glad.h
src/: geometry.cpp  glad.c  main.cpp
src/shaders/: shader.vs
